# rr-finance

./: .gitignore  CLAUDE.md  README.md  migrate_sqlite_to_postgres.py  pyproject.toml  render.yaml
backend/: .env  .env.example  main.py  requirements.txt
database/: rr_finance.db
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: AccountContext.jsx  AnimatedBackground.jsx  App.jsx  index.css  main.jsx
frontend/src/api/: store.js
frontend/src/components/: icons.jsx
frontend/src/hooks/: useStore.js
frontend/src/pages/: AdminPage.jsx  AnalyticsPage.jsx  CalculatorPage.jsx  CashflowPage.jsx  DcaPage.jsx  DistributionPage.jsx  EvolutionPage.jsx  HomePage.jsx  InvestmentsPage.jsx  LoginPage.jsx  PredictionsPage.jsx  SavingsPage.jsx  TransactionsPage.jsx
