[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'rr-finance'
description = 'RR Finance - Personal finance management app.'

requires-python = '>=3.13'
version = "0.1.0"

dependencies = [
  'fastapi',
  'uvicorn',
  'sqlmodel',
  'python-dateutil',
]

[project.optional-dependencies]
dev = [
  'pytest',
  'coverage',
  'ruff'
]

[tool.setuptools.packages.find]
include = ['backend*']

[tool.ruff.lint]
ignore = ['E501', 'E722']
